# 2025-p1-aa879861

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
