[project]
name = "2025-p1-aa879861"
version = "0.1.0"
description = ""
authors = [
    {name = "aa879861",email = "73229271+aa879861@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
